--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>OyeBusy</title>
+    <title>safal website</title>
     <link rel="icon" href="5de9e38be7b0c1575609227.png">
 </head>
 <body>
